# zoega_cli

./: .gitignore  Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: favorites.rs  history.rs  lib.rs  random.rs
src/: config.rs  history.rs  main.rs
