[package]
name = "zoega_cli"
version = "1.7.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
multimap = "0.10.0"
regex = "1.11.1"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
zoega = { path = "../zoega" }

[workspaces]
members = ["zoega"]
